--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
     "react-icons": "^4.12.0",
+    "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
+    "react-scroll-parallax": "^3.4.5",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
