--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-tabs": "^6.0.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
